--- a/style/vitrine.css
+++ b/style/vitrine.css
@@ -23,6 +23,9 @@ header h1 {
     font-size: 40px;
     color: #27d1ff;
     text-align: center;
+    vertical-align: middle;
+    position: relative;
+    top: 1.2em;
 }
 
 body {
@@ -31,34 +34,154 @@ body {
 }
 
 Main {
-    max-width: 810px;
-    border: darkgoldenrod 2px solid;
+    max-width: 850px;
     text-align: center;
     word-wrap: normal;
-    font-family: 'opensans';
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.Programme {
+    max-width: 850px;
+    text-align: center;
+    word-wrap: normal;
+    margin-left: auto;
+    margin-right: auto;
+    border: thick double #17C1FF;
 }
 
 header {
     background-image: url(texture-header.jpg);
     height: 150px;
+    position: relative;
 }
 
 .navigation {
     display: inline-block;
-    background-color: #2e1f30;
-    padding-right: 50px;
-    margin: 0;
-    text-align: right;
+    flex-direction: row;
+    background-color: rgb(43, 42, 42);
+    padding: 8px 25px;
+    margin: 0px;
     color: white;
+    text-align: right;
+    width: 97.4%;
     vertical-align: middle;
+    position: relative;
+    bottom: 3.8em;
+}
+
+.navigation ul {
+    padding: 0;
+    margin: 0;
+}
+
+.navigation li {
+    display: inline;
+}
+
+.navigation a {
+    display: inline-block;
+    margin: 0 30px;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
 
-a:hover{
-    color: #17c1ff;
+.navigation a:hover{
+    color: #17C1FF;
 }
 
-a:active {
-    color: #17c1ff;
+.navigation a:active {
+    color: #17C1FF;
     font-family: 'opensansbold';
 }
+
+
+.en-cours a {
+    color: #17C1FF;
+    font-family: 'opensansbold';
+}
+
+.image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+}
+
+.images {
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+}
+
+main h2 {
+    text-transform: uppercase;
+    text-shadow:0.1em 0.1em 0.2em black;
+    color: #e6e6e6;
+    background-color: rgb(231, 227, 227);
+}
+
+main p {
+    max-width: 750px;
+    text-align: center;
+    padding: 10px;
+    word-wrap: normal;
+}
+
+.images img {
+    margin: 0 7px;
+    float: left;
+}
+
+table {
+    text-align: left;
+    font-family: 'opensans';
+    vertical-align:middle;
+}
+
+th {
+    background-color: skyblue;
+    text-align: center;
+}
+
+.tableau {
+    display: flex;
+    max-height: 480px;
+    overflow-y: auto;
+}
+
+.week1 {
+    color: #F2F2F2;
+}
+
+input[type=text], select, textarea {
+    width: 100%; 
+    padding: 12px; 
+    border: 2px dotted #17C1FF; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px; 
+    resize: vertical 
+  }
+
+  input[type=submit] {
+    background-color: #17C1FF;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  input[type=submit]:hover {
+    background-color: #21a9e9;
+  }
+
+  .formulaire {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    border: #17C1FF solid 2px;
+  }
